<resources>
    <string name="app_name">Latest Hidden Camera Detector</string>
    <string name="picture">Picture</string>
    <string name="description_info">Info</string>
    <string name="request_permission">This sample needs camera permission.</string>
    <string name="camera_error">This device doesn\'t support Camera2 API.</string>
    <string name="intro_message">Here is the Information</string>
    <string name="radiation_meter">Radiation Meter</string>
    <string name="infrared_camera">Infrared Camera</string>
    <string name="tips_tricks">Tips and Tricks</string>
    <string name="camera_text">If you see white light that you can not see by naked eye, it is infrared light.</string>
    <string name="check_mirror">Worried that the mirror might be two-way? There’s a very simple way to check. “The fingernail test is old but it still works,” says Roberts. “Put a fingernail up against the glass. In a real mirror, you can’t reach your finger in the reflection. But if you can touch your own finger in the reflection, that’s a problem. It’s a strong indication that it’s a two-way mirror.”</string>
    <string name="scan_environment">The easiest way to detect hidden cameras is checking around the environment carefully. Search carefully would be helpful to spot “obvious” hidden cameras.</string>
    <string name="outside_tip">If you are searching in public places, avoid times when foot traffic is highest or you could end up drawing a crowd and spending more time answering questions than digging for treasure.</string>
    <string name="slightly_overlap_sweep">When you’re moving the metal detector in a sweeping motion, be careful to overlap your sweeps so you don’t miss any potential targets.</string>
    <string name="slow_down">If you are moving too fast, you might miss something important!</string>
    <string name="title_activity_main2">Main2Activity</string>

    <string name="action_settings">Settings</string>

    <string name="interstitial_ad_sample">Interstitial Ad Sample</string>
    <string name="start_level">Level 1</string>
    <string name="next_level">Next Level</string>
    <!-- -
        This is an ad unit ID for an interstitial test ad. Replace with your own interstitial ad unit id.
        For more information, see https://support.google.com/admob/answer/3052638
    <!- -->
    <!--<string name="app_unit_id">ca-app-pub-3940256099942544~3347511713</string>-->
    <!--<string name="banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>-->
    <!--<string name="interstitial_ad_unit_id">ca-app-pub-3940256099942544/1033173712</string>-->


    <!--real ads-->

    <string name="app_unit_id">ca-app-pub-5000527444742212~9510097663</string>
    <string name="banner_ad_unit_id">ca-app-pub-5000527444742212/1857826596</string>

    <string name="interstitial_ad_unit_id">ca-app-pub-5000527444742212/8858031987</string>
    <string name="title_activity_main3">Main3Activity</string>

    <string name="hello_world">Hello world!</string>
    <!-- -
        This is an ad unit ID for a banner test ad. Replace with your own banner ad unit id.
        For more information, see https://support.google.com/admob/answer/3052638
    <!- -->



    <string name="rate_app">Rate App</string>
    <string name="gift_ads">Gift Ads</string>
    <string name="about_us">About Us</string>
    <string name="use">How to use</string>
    <string name="more_apps">More Apps</string>
    <string name="bedRoom">Bedroom</string>
    <string name="bathRoom">Bathroom</string>
    <string name="changing_room">Changing Room</string>
    <string name="outside">Outside</string>
    <string name="common_places">Suspicious Places</string>
    <string name="use_flashlight">Turn of the lights in your room and turn on the flashlight on your mobile phone and Pan the flashlight around the room.  Spot slowly and examine any suspicious. If you notice any reflective lights, there might be a hidden camera.</string>
    <string name="tissue_box">Analyze the tissue box thoroughly as there are more chances of availability of camera or any suspicios material in the tissue box.</string>
    <string name="shower">Most of the camera will usually be hidden, but the camera\'s lens must always be visible for the camera to be effective. This means that you can always spot a camera by looking for its lens.</string>
    <string name="public_camera">While public cameras tend to be less nefarious and more conspicuous than their personal counterparts, it may be good to know where the nearest \"hidden\" camera is if you\'re attempting to dispute a traffic incident or something similar. You can usually find cameras in the following locations: ATMs Store ceilings Two-way mirrors in stores and high-profile shops (e.g., jewelry fronts) Gas stations Traffic lights</string>
    <string name="demo_video">Demo Video</string>
    <string name="ccccccccccc">nnn</string>


</resources>
