<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#8621ce3e"
    android:gravity="center">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha="0.3"
        android:gravity="center"
        android:padding="@dimen/_10sdp">

        <ImageView
            android:id="@+id/ivBackgroundLogo"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="fitXY"
            android:src="@drawable/black_icon" />


    </RelativeLayout>

    <LinearLayout
        android:layout_width="@dimen/_180sdp"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvBedroom"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_55sdp"
            android:layout_marginBottom="@dimen/_10sdp"
            android:background="@drawable/green_button"
            android:gravity="center"
            android:onClick="bedroom"
            android:text="@string/bedRoom"
            android:textColor="#fff"
            android:textSize="@dimen/_20sdp"
            android:textStyle="bold"
            android:typeface="normal" />

        <TextView
            android:id="@+id/tvBathroom"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_55sdp"
            android:layout_marginBottom="@dimen/_10sdp"
            android:background="@drawable/green_button"
            android:gravity="center"
            android:onClick="bathroom"
            android:text="@string/bathRoom"
            android:textColor="#fff"
            android:textSize="@dimen/_20sdp"
            android:textStyle="bold"
            android:typeface="normal"

            />

        <TextView
            android:id="@+id/tvChangingRoom"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_55sdp"
            android:layout_marginBottom="@dimen/_10sdp"
            android:background="@drawable/green_button"
            android:gravity="center"
            android:onClick="changingRoom"
            android:text="@string/changing_room"
            android:textColor="#fff"
            android:textSize="@dimen/_20sdp"
            android:textStyle="bold"
            android:typeface="normal" />

        <TextView
            android:id="@+id/tvOutside"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_55sdp"
            android:layout_marginBottom="@dimen/_10sdp"
            android:background="@drawable/green_button"
            android:gravity="center"
            android:onClick="outSide"
            android:text="@string/outside"
            android:textColor="#fff"
            android:textSize="@dimen/_20sdp"
            android:textStyle="bold"
            android:typeface="normal" />

        <TextView
            android:id="@+id/tvCommonPlaces"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_55sdp"
            android:background="@drawable/green_button"
            android:gravity="center"
            android:onClick="commonPlaces"
            android:text="@string/common_places"
            android:textColor="#fff"
            android:textSize="@dimen/_18sdp"
            android:textStyle="bold"
            android:typeface="normal"
            />

    </LinearLayout>

    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        ads:adSize="BANNER"
        ads:adUnitId="@string/banner_ad_unit_id" />
    <RelativeLayout
        android:id="@+id/containerFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"></RelativeLayout>


</RelativeLayout>