<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#8621ce3e"
    android:gravity="center"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha="0.3"
        android:gravity="center"
        android:padding="@dimen/_10sdp">

        <ImageView
            android:id="@+id/ivBackgroundLogo"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="fitXY"
            android:src="@drawable/black_icon" />


    </RelativeLayout>

    <LinearLayout
        android:layout_width="@dimen/_220sdp"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvRadiationMeter"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_60sdp"
            android:layout_marginBottom="@dimen/_10sdp"
            android:background="@drawable/green_button"
            android:gravity="center"
            android:onClick="radiationMeter"
            android:text="@string/radiation_meter"
            android:textColor="#fff"
            android:textSize="@dimen/_20sdp"
            android:textStyle="bold"
            android:typeface="normal" />

        <TextView
            android:id="@+id/tvInfraredCamera"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_60sdp"
            android:layout_marginBottom="@dimen/_10sdp"
            android:background="@drawable/green_button"
            android:gravity="center"
            android:onClick="infraredCamera"
            android:text="@string/infrared_camera"
            android:textColor="#fff"
            android:textSize="@dimen/_20sdp"
            android:textStyle="bold"
            android:typeface="normal" />

        <TextView
            android:id="@+id/tvTipsTricks"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_60sdp"
            android:background="@drawable/green_button"
            android:gravity="center"
            android:onClick="tipsAndTricks"
            android:text="@string/tips_tricks"
            android:textColor="#fff"
            android:textSize="@dimen/_20sdp"
            android:textStyle="bold"
            android:typeface="normal" />

    </LinearLayout>

    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        ads:adSize="BANNER"
        ads:adUnitId="@string/banner_ad_unit_id" />

    <RelativeLayout
       android:id="@+id/container_fragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"></RelativeLayout>

</RelativeLayout>