<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:background="#fff">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/color_tips_tricks"
        >

        <TextView
            android:id="@+id/tvInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Possibility of cam in changing room is 12%"
            android:textAlignment="center"
            android:textColor="#fff"
            android:textAllCaps="true"
            android:textSize="@dimen/_14sdp" />

        <ScrollView
            android:id="@+id/scrollView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/textView"
            android:padding="@dimen/_10sdp"
            android:layout_below="@+id/tvInfo"
            >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Tip # 1  Scan the Environment Carefully"
                android:textColor="@color/color_heading"
                android:textSize="@dimen/_16sdp" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/scan_environment"
                android:textSize="@dimen/_15sdp"
                android:textColor="@color/color_content"
                android:layout_marginBottom="@dimen/_20sdp"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Tip # 2 Observe the mirror  "
                android:textColor="@color/color_heading"
                android:textSize="@dimen/_16sdp" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/check_mirror"
                android:textSize="@dimen/_15sdp"
                android:textColor="@color/color_content"
                android:layout_marginBottom="@dimen/_20sdp"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Tip # 3 Slightly Overlap sweep"
                android:textColor="@color/color_heading"
                android:textSize="@dimen/_16sdp" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/slightly_overlap_sweep"
                android:textSize="@dimen/_15sdp"
                android:textColor="@color/color_content"
                android:layout_marginBottom="@dimen/_20sdp"
                />


        </LinearLayout>

    </ScrollView>

        <TextView
            android:id="@+id/textView"
            android:layout_width="@dimen/_150sdp"
            android:layout_height="@dimen/_40sdp"
            android:layout_above="@+id/adView"
            android:background="@drawable/green_button"
            android:text="I got it"
            android:textColor="#fff"
            android:gravity="center"
            android:textSize="@dimen/_20sdp"
            android:layout_centerHorizontal="true"
            />

        <com.google.android.gms.ads.AdView
            android:id="@+id/adView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            ads:adSize="BANNER"
            ads:adUnitId="@string/banner_ad_unit_id" />

    </RelativeLayout>

</RelativeLayout>